--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{  "homepage": "https://wgalik.github.io/Inspiring-quote-app---Vue.js/",
+{
+  "homepage": "https://wgalik.github.io/Inspiring-quote-app---Vue.js/",
   "name": "sentence-app-vue-js",
   "version": "0.0.0",
   "private": true,
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "gh-pages": "^6.3.0",
     "sass": "^1.89.2",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
